--- a/Front/sage/src/app/globals.css
+++ b/Front/sage/src/app/globals.css
@@ -1,14 +1,11 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --font-roboto: 'Roboto', sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+body {
+  font-family: var(--font-roboto);
 }
+
 
 html,
 body {
