--- a/backend/core/templates/partials/logo.html
+++ b/backend/core/templates/partials/logo.html
@@ -3,7 +3,7 @@
 <tr>
     <td align="center" style="padding: 0">
         <img
-            src="{% static "img/logo.svg" %}"
+            src="{{ BACKEND_URL }}{% static "img/logo.svg" %}"
             width="600"
             alt="FinanSee"
             style="
